fix overflow stuff

--- a/transposition-frontend/src/components/circle-of-fifth/circleOfFifth.css
+++ b/transposition-frontend/src/components/circle-of-fifth/circleOfFifth.css
@@ -8,6 +8,7 @@
     align-items: center;
     border: 1px solid #000;
     max-width: calc(100vw - 40px);
+    overflow: hidden;
 }
 
 .circle-outer {
